objects/Opportunity.object
<CustomObject>
    <sharingModel>Private</sharingModel>
    <businessProcesses>
        <fullName>SP Senior Living</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Depositor</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Pending Qualification</fullName>
        </values>
        <values>
            <fullName>Resident</fullName>
        </values>
        <values>
            <fullName>Visit</fullName>
        </values>
        <values>
            <fullName>Waitlist</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SP Skilled Nursing</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Admitted</fullName>
        </values>
        <values>
            <fullName>Denied</fullName>
        </values>
        <values>
            <fullName>Lost</fullName>
        </values>
        <values>
            <fullName>Resident</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Apartment</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>if (
(TEXT(StageName ) = &apos;New&apos; || TEXT(StageName ) = &apos;Pending Qualification&apos; || TEXT(StageName ) = &apos;Visit&apos; )
&amp;&amp;
NOT(ISBLANK( TEXT(Lead_Score__c) ))
, TEXT(Lead_Score__c), TEXT(StageName ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Top 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lost To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Lost To)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community__c</fullName>
        <label>Community</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Community_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>IF (ISPICKVAL( StageName , &apos;Pending&apos;) || ISPICKVAL( StageName , &apos;Not Yet Classified&apos;) || ISPICKVAL( StageName , &apos;Future Lead Email&apos;) || ISPICKVAL( StageName , &apos;Future Lead-Mailings Only&apos;) || ISPICKVAL( StageName , &apos;Future Lead (beyond 6 months)&apos;) || ISPICKVAL( StageName , &apos;Cool Lead (91 days - 6 months)&apos;) || ISPICKVAL( StageName , &apos;Warm Lead (31 - 90 days)&apos;) || ISPICKVAL( StageName , &apos;Hot Lead (8-30 days)&apos;) || ISPICKVAL( StageName , &apos;Ready Immediately (within 7 days)&apos;) || ISPICKVAL( StageName , &apos;Assessment&apos;) || ISPICKVAL( StageName , &apos;Accepted&apos;) || ISPICKVAL( StageName , &apos;Waitlist&apos;) || ISPICKVAL( StageName , &apos;Courtesy Hold&apos;) || ISPICKVAL( StageName , &apos;Depositor&apos;) || ISPICKVAL( StageName , &apos;Cancelled Deposit&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Date__c</fullName>
        <label>Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <label>Lead Temperature</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
                <value>
                    <fullName>Not Yet Classified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DepositDate__c</fullName>
        <label>Deposit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lost_Reason</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deposit_Date__c</fullName>
        <label>Deposit Date (Transaction)</label>
        <summarizedField>Transaction__c.Transaction_Date__c</summarizedField>
        <summaryFilterItems>
            <field>Transaction__c.Type__c</field>
            <operation>equals</operation>
            <value>Deposit</value>
        </summaryFilterItems>
        <summaryForeignKey>Transaction__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Housing_Type__c</fullName>
        <label>Level of Care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Independent Living</fullName>
                </value>
                <value>
                    <fullName>Assisted Living</fullName>
                </value>
                <value>
                    <fullName>Memory Care</fullName>
                </value>
                <value>
                    <fullName>Skilled Nursing</fullName>
                </value>
                <value>
                    <fullName>Active Adult</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Move_In_Date__c</fullName>
        <label>Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Housing_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp_Display__c</fullName>
        <label>Temp Display</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accepted_Date__c</fullName>
        <label>Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional</fullName>
                </value>
                <value>
                    <fullName>50% ROC</fullName>
                </value>
                <value>
                    <fullName>90% ROC</fullName>
                </value>
                <value>
                    <fullName>ROC I</fullName>
                </value>
                <value>
                    <fullName>ROC II</fullName>
                </value>
                <value>
                    <fullName>Unbundled</fullName>
                </value>
                <value>
                    <fullName>75% ROC</fullName>
                </value>
                <value>
                    <fullName>Type A Traditional</fullName>
                </value>
                <value>
                    <fullName>Type A 90% ROC</fullName>
                </value>
                <value>
                    <fullName>Type A 50% ROC</fullName>
                </value>
                <value>
                    <fullName>Type B 90% ROC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Senior_Living__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Senior Living</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TypeOfService__c</fullName>
        <description>Type of service requested.</description>
        <label>Type of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consultation</fullName>
                </value>
                <value>
                    <fullName>2nd Opinion</fullName>
                </value>
                <value>
                    <fullName>Radiology Services</fullName>
                </value>
                <value>
                    <fullName>Lab Services</fullName>
                </value>
                <value>
                    <fullName>Follow up</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>Other (please specify in comments)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_No_Visit__c</fullName>
        <formula>if ( isblank(Number_of_Appointments__c ), &apos;No Visit Yet&apos;,
   if ( Number_of_Appointments__c = 0 , &apos;0 - No Visit Yet&apos;,
         if ( Number_of_Appointments__c = 1 , &apos;1 - One Visit&apos;, &apos;M - Multiple Visits&apos;)
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Visit /No Visit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Date__c</fullName>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Tour_Date__c</fullName>
        <label>Initial Tour Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Move_Out_Reason__c</fullName>
        <label>Move Out Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Move Closer to Family</fullName>
                </value>
                <value>
                    <fullName>Move in with Family</fullName>
                </value>
                <value>
                    <fullName>Move to Health Center</fullName>
                </value>
                <value>
                    <fullName>No Availability</fullName>
                </value>
                <value>
                    <fullName>Prospect Decision</fullName>
                </value>
                <value>
                    <fullName>Satisfaction Guarantee</fullName>
                </value>
                <value>
                    <fullName>Unqualified Medically</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Primary Contact)</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Resident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Second Resident</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Second Resident)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skilled_Nursing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skilled Nursing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Floater__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Floater</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Occupancy__c</fullName>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Occupancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Resident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Resident</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Primary Resident)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Primary Household)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Insurance__c</fullName>
        <label>Primary Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AARP</fullName>
                </value>
                <value>
                    <fullName>Aetna</fullName>
                </value>
                <value>
                    <fullName>Aetna MMAI</fullName>
                </value>
                <value>
                    <fullName>Anthem</fullName>
                </value>
                <value>
                    <fullName>Blue Cross Blue Shield</fullName>
                </value>
                <value>
                    <fullName>Bright Health</fullName>
                </value>
                <value>
                    <fullName>Bright Health MMAI</fullName>
                </value>
                <value>
                    <fullName>Cigna</fullName>
                </value>
                <value>
                    <fullName>Cigna MMAI</fullName>
                </value>
                <value>
                    <fullName>Health Alliance</fullName>
                </value>
                <value>
                    <fullName>Humana</fullName>
                </value>
                <value>
                    <fullName>Humana MMAI</fullName>
                </value>
                <value>
                    <fullName>Optum</fullName>
                </value>
                <value>
                    <fullName>PACE</fullName>
                </value>
                <value>
                    <fullName>UHC</fullName>
                </value>
                <value>
                    <fullName>UHC MMAI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reporting Community</label>
        <referenceTo>Community__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internet_Lead_Source__c</fullName>
        <label>Internet Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Activity_Status__c</fullName>
        <formula>If ( Past_Due_Active_Prospect__c , If(ISBLANK( Next_Scheduled_Activity_Date__c ), &apos;No Scheduled Follow Up&apos;, &apos;Past Due&apos;) ,&apos;Current&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Activity Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_City__c</fullName>
        <formula>Primary_Contact__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_Initial_Visit__c</fullName>
        <formula>IF (ISBLANK( Initial_Appointment_Date__c ) &amp;&amp; NOT(ISBLANK(Opportunity_Inquiry_Date__c )),0, Initial_Appointment_Date__c - Opportunity_Inquiry_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days to Initial Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Move_In_Date__c</fullName>
        <label>Expected Move In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Activity_Date__c</fullName>
        <label>Initial Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Appointment_Date__c</fullName>
        <label>Last Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>Primary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_State__c</fullName>
        <formula>Primary_Contact__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eReferral_Facility_Id__c</fullName>
        <description>The receiving facility name.</description>
        <label>eReferral Facility Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_OCR_for_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create OCR for Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposit_Cancelled_Date__c</fullName>
        <label>Deposit Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Appointments__c</fullName>
        <label>Number of Appointments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Second_Resident_Exists__c</fullName>
        <formula>if (isblank( Second_Resident__c ), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Second Resident Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counter_Stage_MI_and_MO__c</fullName>
        <formula>if ( text(StageName) = &apos;Admitted&apos; ||text(StageName) = &apos;Resident&apos; || text(StageName) = &apos;Move Out&apos;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter Stage MI and MO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Contact__c</fullName>
        <formula>If ( Last_Completed_Activity_Date__c = null, null, today() - Last_Completed_Activity_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Contact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Force_Occupancy_Trigger__c</fullName>
        <formula>Toggle_Occupancy_Trigger__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Force Occupancy Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOC_Different_from_Room__c</fullName>
        <formula>if (ISBLANK(Unit__c), false,
if ( Unit__r.Level_of_Care_formula__c = TEXT( Housing_Type__c ), false, true)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LOC Different from Room</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Move_Out_Discharge_Date__c</fullName>
        <label>Move Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Resident_Exists__c</fullName>
        <formula>if(isblank( Primary_Resident__c ), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Resident Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Web_Requested_Tour_Date__c</fullName>
        <label>Web Req. Tour Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Appointment_Date__c</fullName>
        <label>Initial Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Inquiry_Date__c</fullName>
        <label>Inquiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_Formula__c</fullName>
        <formula>if (Status__c = &apos;Not Yet Classified&apos; &amp;&amp; text(StageName) = &apos;New&apos;, Account.FirstName + &apos; &apos; + Account.LastName,


IF(NOT(ISBLANK(Primary_Resident__c )) &amp;&amp; NOT( Primary_Resident__r.Deceased__c ) &amp;&amp; ISBLANK( Second_Resident__c ), Primary_Resident__r.FirstName + &apos; &apos; + Primary_Resident__r.LastName + &apos; - &apos; +   Status__c,

IF( NOT(ISBLANK(Primary_Resident__c ))&amp;&amp; NOT( Primary_Resident__r.Deceased__c ) &amp;&amp; NOT(ISBLANK( Second_Resident__c )) &amp;&amp; NOT( Second_Resident__r.Deceased__c ), Primary_Resident__r.FirstName + &apos; &apos; + Primary_Resident__r.LastName + &apos; &amp; &apos; + Second_Resident__r.FirstName + &apos; &apos; + Second_Resident__r.LastName + &apos; - &apos; +  Status__c,

IF( NOT(ISBLANK(Primary_Resident__c ))&amp;&amp; NOT( Primary_Resident__r.Deceased__c ) &amp;&amp; NOT(ISBLANK( Second_Resident__c )) &amp;&amp; Second_Resident__r.Deceased__c , Primary_Resident__r.FirstName + &apos; &apos; + Primary_Resident__r.LastName + &apos; - &apos; + Status__c,

IF( NOT(ISBLANK(Primary_Resident__c ))&amp;&amp; Primary_Resident__r.Deceased__c &amp;&amp; NOT(ISBLANK( Second_Resident__c )) &amp;&amp; NOT(Second_Resident__r.Deceased__c) , Second_Resident__r.FirstName + &apos; &apos; + Second_Resident__r.LastName + &apos; - &apos; +  Status__c,

Account.FirstName + &apos; &apos; + Account.LastName+ &apos; - &apos; + Status__c))))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Due_Active_Prospect__c</fullName>
        <formula>IF ( Is_Active__c,

IF ( ISBLANK(Next_Scheduled_Activity_Date__c), True,
IF (Next_Scheduled_Activity_Date__c &lt; TODAY(), true, false)
)

, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Past Due Active Prospect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toggle_Occupancy_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Toggle Occupancy Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lost_Denied_Reason_Detail__c</fullName>
        <label>Lost Lead Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Inquiries_with_a_Visit__c</fullName>
        <formula>IF (NOT(ISBLANK( Initial_Appointment_Date__c )) &amp;&amp; NOT(ISBLANK(Opportunity_Inquiry_Date__c )),1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Inquiries with a Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Room_Vacant_Before_Move_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Room Vacant Before Move In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inquiries_with_No_Visit_Yet__c</fullName>
        <formula>IF (ISBLANK( Initial_Appointment_Date__c ) &amp;&amp; NOT(ISBLANK(Opportunity_Inquiry_Date__c )),1,  0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquiries with No Visit Yet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Information_Packet_Sent_Date__c</fullName>
        <label>Information Packet Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Completed_Activity_Date__c</fullName>
        <label>Last Completed Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Completed_Activity_Type__c</fullName>
        <label>Last Completed Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Activity_Date__c</fullName>
        <label>Next Scheduled Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Activity_Type__c</fullName>
        <label>Next Scheduled Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Counter_Stage_Lost_and_Denied__c</fullName>
        <formula>if ( text(StageName) = &apos;Lost Lead&apos; ||text(StageName) = &apos;Denied&apos; , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter Stage Lost and Denied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insurance_Plan_Denial_Details__c</fullName>
        <label>Insurance Plan Denial Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Completed_Activities__c</fullName>
        <label>Number of Completed Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web_Requested_Tour_Time_of_Day__c</fullName>
        <label>Web Req. Tour Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Scheduled_Appointment_Date__c</fullName>
        <label>Next Scheduled Appointment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Not_Opened_After_Conversion_Yet__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Not Opened After Conversion Yet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_Original_Owner_as_Floater__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign Original Owner as Floater</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counter_Has_Referring_Practioner__c</fullName>
        <formula>if (ISBLANK( HealthCloudGA__ReferringPractitioner__c ), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Counter Has Referring Practioner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Information_Packet_Returned_Date__c</fullName>
        <label>Information Packet Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Connected_Conversation_Date__c</fullName>
        <label>First Connected Conversation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clinical_Capability_Denial_Details__c</fullName>
        <label>Clinical Capability Denial Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Contacted_in_Designated_Candence__c</fullName>
        <formula>if ( 

ispickval(Lead_Score__c , &apos;Hot&apos;) &amp;&amp;  (Days_Since_Last_Contact__c = null || Days_Since_Last_Contact__c &gt; 30),
true, 
  if (ispickval(Lead_Score__c , &apos;Warm&apos;) &amp;&amp;  (Days_Since_Last_Contact__c = null || Days_Since_Last_Contact__c &gt; 60), true,
 if (ispickval(Lead_Score__c , &apos;Cold&apos;) &amp;&amp;  (Days_Since_Last_Contact__c = null || Days_Since_Last_Contact__c &gt; 90),
true, false)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Contacted in Designated Cadence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Toggle_Create_System_Activities_Trigger__c</fullName>
        <label>Toggle Create System Activities Trigger</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Senior_Living</fullName>
        <active>true</active>
        <businessProcess>SP Senior Living</businessProcess>
        <label>Senior Living</label>
    </recordTypes>
    <recordTypes>
        <fullName>Skilled_Nursing</fullName>
        <active>true</active>
        <businessProcess>SP Skilled Nursing</businessProcess>
        <label>Skilled Nursing</label>
    </recordTypes>
</CustomObject>